--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,26 @@
 .App {
   text-align: center;
 }
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.navBarLink {
+  text-decoration: none;
+  color: #f2f2f2;
+  text-align: center;
+  font-size: 16px;
+  padding: 15px 15px;
+}
+
+.navBarLink:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navBarLink .active {
+  background-color: salmon;
+  color: white;
+}
