--- a/src/components/DisplayStuff/displaystuff.module.css
+++ b/src/components/DisplayStuff/displaystuff.module.css
@@ -6,3 +6,9 @@
   grid-row-gap: 0px;
   max-width: 100vw;
 }
+
+@media screen and (max-width: 768px) {
+  .swords {
+    grid-template-columns: 1fr;
+  }
+}
