--- a/src/components/DisplayStuff/displaystuff.module.css
+++ b/src/components/DisplayStuff/displaystuff.module.css
@@ -1,7 +1,6 @@
-.swords {
+.entries {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   max-width: 100vw;
