--- a/src/components/Enrtry/Entry.module.css
+++ b/src/components/Enrtry/Entry.module.css
@@ -28,3 +28,13 @@
   justify-content: flex-start;
   width: 30ch;
 }
+
+@media screen and (max-width: 425px) {
+  .horizontal {
+    flex-direction: column;
+    align-items: center;
+  }
+  .box {
+    align-items: center;
+  }
+}
